public class LegacyNotificationService {
    public void sendOldSchool(String msg, String recipient) {
        System.out.println("LEGACY SERVICE >>> Sending to " + recipient + ": " + msg);
    }
}